--- a/templates/Checkin.html
+++ b/templates/Checkin.html
@@ -27,7 +27,10 @@
               <a class="navbar-brand"><b>天地网实验室</b><small>考勤系统</small></a>
             </div>
             <div class="navbar-custom-menu">
-              <ul class="nav navbar-nav">
+             <ul class="nav navbar-nav">
+              <li><a href="/signin">刷卡页面</a></li>
+              <ul>
+<!--               <ul class="nav navbar-nav">
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">后台同步 <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
@@ -35,7 +38,7 @@
                     <li><a class="clickable" claction='/syn_sign'>同步打卡数据</a></li>
                   </ul>
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
           <!-- /.container-fluid -->
